added exco pics

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
+    <!-- navbar should be fixed -->
     <header class="">
       <!-- navbar start -->
       <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -34,14 +35,15 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
+              <a class="nav-link" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Misc</a>
             </li>
+    
           </ul>
         </div>
       </nav>
@@ -55,22 +57,34 @@
       <!-- jumbotron end -->
     </header>
     <div class="container">
+      <!-- history of the movement -->
       <section class="container" id="history">
         <h2 class="text-center mt-3 heading">Brief History of the movement</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias nihil
-          quod, deserunt ex soluta atque nam ratione saepe aliquid officia,
-          sapiente consequatur dicta rem magni veritatis laboriosam aspernatur.
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
-          mollitia quam corporis necessitatibus facilis nam consequuntur dolore
-          itaque deleniti expedita tempore magnam ex ea libero vero sequi,
-          soluta inventore. Atque?
+          The CHRISTIAN YOUTH FELLOWSHIP SIMBOCK MENDONG was founded  in September 2007 a month after 
+          the SIMBOCK MENDONG PRAYER CELL started at Emmaus Bilingual School Complex (COSBIE). Most of the pioneer members of this 
+          movement were those who left CYF Nsimeyong(reason why CYF NSIMEYONG is known as the mother of CYF SIMBOCK MENDONG. 
         </p>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias nihil
-          quod, deserunt ex soluta atque nam ratione saepe aliquid officia,
-          sapiente consequatur dicta rem magni veritatis laboriosam aspernatur.
-          Eveniet, aut.
+          The pioneer executive of this group was headed by BROTHER ATANGA NDI LESLIE who piloted the activities of this group from  2007 to 2011.
+          Brother Lesly and his theme took this group to her first ever rally( zonal) in 
+          2008 at PC Basto, where the group took part in all the activities and emerged 4th in the YAOUNDE Central Zone. 
+        </p>
+        <p>
+          Later on power changed hands and SISTER TABE SERA AGBOR became the second President of CYF SIMBOCK MENDONG.
+           Sis Tabe and her executive took up the membership of this group to 50. 
+          During the 2014 Church elections, SISTER TAMON ANJEH was elected the president.
+           Her mandate was so short as she left office in November 2015 when the Simbock congregation instituted an age limit of 25years  for CYF  members.. This decision crippled the movement to ground level ..
+        </p>
+        <p>
+          As a result,  by-elections werw conducted on November 29th 2015 and a new Executive bureau was formed with Bro Tah Louis Binda as President. 
+          This Executive took the group at the stage of dying and did its almost best to restore the group  to normal.
+         If the the group is strong and vibrant today, thanks to the efforts of BRO TAH LOUIS and His team. 
+        SIMBOCK MENDONG was inaugurated alongside other groups in the East Mungo North Presbytery by the National Youth Secretary( Rev. Ntalikong Amos Nfor) in 2017, during a Presbytery  Leadership Course Meeting at PC Bastos
+        </p>
+        <p>
+          As the CYF grew both numerically and spiritually, she was given the opportunity to Host the 2018 zonal Rally under the theme "Onesimus now Useful" (Philemon).
+          On the Thursday, 25th March 2019, Bro Tag Louis and his Executive ended their mandate giving chance to a new executive headed by BRO AKONJI CLIFF. Today the membership of the group stands at 60 registered members..
         </p>
       </section>
       <!-- colors -->
@@ -123,7 +137,12 @@
          </div>
        </div>
        <!-- colors end -->
-         
+       </section>  
+       <!-- MMaps -->
+       <section class="mmaps" id="mmaps">
+         <h2 class='heading text-center'>MMAPS</h2>
+         <h2>Contrary to what you might be thinkinh, mmaps here does not refer to the ground map,or gird</h2>
+       </section>
     <!-- bootstrap srcipts -->
     <script src="./assets/node_modules/popper/popper.js"></script>
     <script src="./assets/node_modules/jquery/jquery.js"></script>
