--- a/gallery.html
+++ b/gallery.html
@@ -41,71 +41,49 @@
       </nav>
       <!-- navbar end -->
     </header>
-    <section class="container-fluid">
-      <h1 class="heading text-center my-3">Group Pictures</h1>
-      <div class="rowe">
-        <div class="column">
-          <img
-            src="./assets/images/imagesNew/23771422253_status_c58f5ace38354e8eac575d4f3cf241f8.jpg"
-            alt=""
-          />
-          <img
-            src="./assets/images/imagesNew/3bb7647c4a13797af08e0033738b4164.0.jpg"
-            alt=""
-          />
-          <img
-            src="./assets/images/imagesNew/8b0cacf6673ef06670a816dab160558b.0.jpg"
-            alt=""
-          />
-          <img src="./assets/images/imagesNew/IMG-20200225-WA0027.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200225-WA0029.jpg" alt="" />
-        </div>
-        <div class="column">
-          <img src="./assets/images/imagesNew/IMG-20200225-WA0083.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200225-WA0084.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200225-WA0085.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200308-WA0010.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200308-WA0011.jpg" alt="" />
-        </div>
-        <div class="column">
-          <img src="./assets/images/imagesNew/IMG-20200401-WA0013.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200401-WA0019.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200401-WA0022.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200401-WA0025.jpg" alt="" />
-          <img src="./assets/images/imagesNew/IMG-20200401-WA0027.jpg" alt="" />
-        </div>
-        <div class="column">
-          <img
-            src="./assets/images/Rally-Images/IMG-20200216-WA0025.jpg"
-            alt=""
-          />
-          <img
-            src="./assets/images/Rally-Images/IMG-20200216-WA0026.jpg"
-            alt=""
-          />
-          <img
-            src="./assets/images/Rally-Images/IMG-20200216-WA0027.jpg"
-            alt=""
-          />
-          <img
-            src="./assets/images/Rally-Images/IMG-20200216-WA0028.jpg"
-            alt=""
-          />
-          <img
-            src="./assets/images/Rally-Images/IMG-20200216-WA0029.jpg"
-            alt=""
-          />
-          <img
-            src="./assets/images/Rally-Images/IMG-20200216-WA0030.jpg"
-            alt=""
-          />
-        </div>
-      </div>
+    <section class="container exco mt-3" id="exco">
+     <div class="horizontal">
+       <div class="vertical">
+          <img src="./assets/images/Rally-Images/IMG-20200216-WA0017.jpg" alt="">
+          <img src="./assets/images/Rally-Images/IMG-20200216-WA00118.jpg" alt="">
+          <img src="./assets/images/Rally-Images/IMG-20200216-WA0031jpg" alt="">
+          <img src="./assets/images/Rally-Images/IMG-20200216-WA0019.jpg" alt="">
+          <img src="./assets/images/Rally-Images/IMG-20200216-WA0020.jpg" alt="">
+          <img src="./assets/images/Rally-Images/IMG-20200216-WA0024.jpg" alt="">
+          <img src="./assets/images/imagesNew/IMG-20200401-WA0028.jpg" alt="">
+       </div>
+       <div class="vertical">
+        <img src="./assets/images/imagesNew/237671185624_status_477f64930b6545408445f4f7cf419387.jpg" alt="">
+        <img src="./assets/images/imagesNew/IMG-20200225-WA0083.jpg" alt="">
+        <img src="./assets/images/imagesNew/IMG-20200225-WA0084.jpg" alt="">
+        <img src="./assets/images/imagesNew/IMG-20200225-WA0085.jpg" alt="">
+        <img src="./assets/images/imagesNew/IMG-20200225-WA0010.jpg" alt="">
+        <img src="./assets/images/imagesNew/23779587534_status_d297aa6f032a4d979b70eb735fe974e9.jpg" alt="">
+        <img src="./assets/images/Rally-Images/237650033843_status_60debc99b7a04b9ca157c86f6f360649.jpg" alt="">
+       </div>
+       <div class="vertical">
+        <img src="./assets/images/Rally-Images/IMG-20200216-WA0027.jpg" alt="">
+        <img src="./assets/images/imagesNew/23771422253_status_c58f5ace38354e8eac575d4f3cf241f8.jpg" alt="">
+        <img src="./assets/images/imagesNew/0b0422c2be7bb03834491a33ffc6d5b7.0.jpg" alt="">
+        <img src="./assets/images/Rally-Images/IMG-20200216-WA0028.jpg" alt="">
+        <img src="./assets/images/imagesNew/IMG-20200401-WA0022.jpg" alt="">
+        <img src="./assets/images/imagesNew/IMG-20200412-WA0358.jpg" alt="">
+       </div>
+       <div class="vertical">
+         <img src="./assets/images/Rally-Images/IMG-20200216-WA0029.jpg"" alt="">
+         <img src="./assets/images/imagesNew/237671185624_status_477f64930b6545408445f4f7cf419387.jpg" alt="">
+         <img src="./assets/images/Rally-Images/IMG-20200216-WA0039.jpg" alt="">
+         <img src="./assets/images/imagesNew/IMG-20200412-WA0359.jpg" alt="">
+         <img src="./assets/images/imagesNew/IMG-20200412-WA0357.jpg" alt="">
+         <img src="./assets/images/Rally-Images/20200216_013158.jpg" alt="">
+        
+       </div>
+     </div>
     </section>
     <!-- exco images -->
-    <section class="container-fluid" id="excos">
-        <h1 class='heading text-center'>The Group's Exco</h1>
-        <h3> See the faces behind the scenes of the succes of the movement</h3>
+    <section class="container" id="excos">
+        <h1 class='heading text-center my-3'>Executive Committe</h1>
+        <h5>Meet the young,dynamic, proactive and ambitious CYF Simbock Exco</h5>
       <div class="row">
         <div class="col-sm-3">
           <div class="card">
