--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
     <div class="container mb-4">
       <!-- history of the movement -->
-      <section class="container" id="history">
+      <section class="history" id="history">
         <h2 class="text-center mt-3 heading">Brief History of the movement</h2>
         <p>
           The CHRISTIAN YOUTH FELLOWSHIP SIMBOCK MENDONG was founded  in September 2007 a month after 
@@ -139,20 +139,21 @@
        </div>
        <!-- colors end -->
        </section> 
-       <section class="maps" id="maps">
+      
+       <section class="maps mt-4" id="maps">
          <h2 class="heading text-center">CYF MMAPS</h2>
          <p>Contrary to a world map, or a cart, the CYF mmaps is an acronym which stands for Motto,
-            Membership, Aim, Promise and Salutation.</p>
-            <h3>Motto</h3>
+            Membership, Aim, Promise and Salutation. These are the core values of the movement.</p>
+            <h4>Motto</h4>
             <p>For God has already placed Jesus Christ as the one and only foundation
               and no other foundation can be laid. <b>1st Corinth 3:11</b> 
             </p>
-            <h3>Aim</h3>
+            <h4>Aim</h4>
             <p>The AIM of the Christian Youth Fellowship is to bring together Youths
               who want to serve Jesus Christ. The movement wants to develop among its members
               a sense of responsiblity towards the church and her mission to the world. <b>Mt 28:18-20</b>
             </p>
-            <h3>Promise</h3>
+            <h4>Promise</h4>
             <p> We promise to seek under the leadership of Christ and in Fellowshipwith one another
               the will of God for ourselves, for the church and for the world and to do it. <b>James 2:14-17</b>
             </p>
@@ -164,10 +165,17 @@
     </div>
     <!-- footer + copyright -->
       <section class="footer bg-dark text-white p-3 mx-10" id="footer">
+        <div class="btn">
+        <div class="up" id="up">
+          <i class="fas fa-chevron-up"></i>
+        </div>
+      </div>
+      <div class="details">
         peldrige8@gmail.com</br>
         Yaounde, Cameroon</br>
         CYF Simbok-Mendong</br>
         <p class="text-left">&copy;2020: All rights reserved</p>
+      </div>
       </section>
       
     <!-- bootstrap srcipts -->
