--- a/gallery.html
+++ b/gallery.html
@@ -81,9 +81,10 @@
      </div>
     </section>
     <!-- exco images -->
-    <section class="container" id="excos">
+    <section class="container mb-5" id="excos">
         <h1 class='heading text-center my-3'>Executive Committe</h1>
-        <h5>Meet the young,dynamic, proactive and ambitious CYF Simbock Exco</h5>
+        <p>Meet the young,dynamic, proactive and ambitious CYF Simbock Executive commitee. This team was voted during last year's elections.
+        </p>
       <div class="row">
         <div class="col-sm-3">
           <div class="card">
@@ -102,7 +103,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="./assets/images/Exco's/IMG-20200401-WA0018.jpg"
+              src="./assets/images/Exco's/36b6c14f9719de74db3c863b20857750.jpg"
               alt="Card image"
             />
             <div class="card-body">
@@ -156,7 +157,7 @@
             <div class="card">
               <img
                 class="card-img-top"
-                src="./assets/images/Exco's/IMG-20200401-WA0015.jpg"
+                src="./assets/images/Exco's/l60Hf.png"
                 alt="Card image"
               />
               <div class="card-body">
@@ -197,7 +198,7 @@
             <div class="card">
               <img
                 class="card-img-top"
-                src="./assets/images/Exco's/IMG-20200415-WA0042.jpg"
+                src="./assets/images/Exco's/36b6c14f9719de74db3c863b20857750.jpg"
                 alt="Card image"
               />
               <div class="card-body">
@@ -236,7 +237,7 @@
             <div class="card">
               <img
                 class="card-img-top"
-                src="./assets/images/Exco's/IMG-20200413-WA0042.jpg"
+                src="./assets/images/Exco's/36b6c14f9719de74db3c863b20857750.jpg"
                 alt="Card image"
               />
               <div class="card-body">
@@ -264,7 +265,7 @@
             <div class="card">
               <img
                 class="card-img-top"
-                src="./assets/images/Exco's/IMG-20200415-WA0042.jpg"
+                src="./assets/images/Exco's/l60Hf.png"
                 alt="Card image"
               />
               <div class="card-body">
