fixed button issue

--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <title>Gallery</title>
     <link rel="stylesheet" href="./assets/node_modules/bs4/bootstrap.css" />
     <link rel="stylesheet" href="./main.css" />
+    <script src="./main.js" defer></script>
   </head>
   <body>
     <header class="">
@@ -34,14 +35,15 @@
               <a class="nav-link" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Misc</a>
+              <a class="nav-link" href="#">Videos</a>
             </li>
           </ul>
         </div>
       </nav>
       <!-- navbar end -->
     </header>
-    <section class="container exco mt-3" id="exco">
+    <section class="container exco mt-3" id="gallery">
+      <h1 class="text-center heading">Group Pictures</h1>
      <div class="horizontal">
        <div class="vertical">
           <img src="./assets/images/Rally-Images/IMG-20200216-WA0017.jpg" alt="">
@@ -275,6 +277,18 @@
             </div>
           </div>
       </div>
+    </section>
+    <section class="footer bg-dark text-white p-5 mx-10 mb-0" id="footer">
+      <div class="up" id="up">
+        <i class="fas fa-chevron-up"></i>
+      </div>
+      
+      <div class="details">
+      peldrige8@gmail.com</br>
+      Yaounde, Cameroon</br>
+      CYF Simbock-Mendong</br>
+      <p class="text-right">&copy;2020: All rights reserved</p>
+    </div>
     </section>
     <!-- bootstrap CDN -->
     <script src="./assets/node_modules/jquery/jquery.js"></script>
