--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
               <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#colors">Gallery</a>
+              <a class="nav-link" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Videos</a>
+              <a class="nav-link" href="./video.html">Videos</a>
             </li>
     
           </ul>
