--- a/gallery.html
+++ b/gallery.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="./assets/node_modules/bs4/bootstrap.css" />
     <link rel="stylesheet" href="./main.css" />
     <script src="./main.js" defer></script>
+    <script src="./assets/node_modules/bs4/bootstrap.js" defer></script>
   </head>
   <body>
     <header class="">
       <!-- navbar start -->
-      <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
         <!-- Brand -->
         <a class="navbar-brand" href="#">CYF</a>
 
@@ -35,8 +36,9 @@
               <a class="nav-link" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Videos</a>
+              <a class="nav-link" href="./video.html">Videos</a>
             </li>
+    
           </ul>
         </div>
       </nav>
