modified hero section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
       type="image/x-icon"
       href="./assets/images/chi-rho-labarum-christian-symbolism-symbol-png-clip-art.png"
     />
-    <link rel="stylesheet" href="./assets/node_modules/bs4/bootstrap.css" />
-    <script src="./assets/node_modules/bs4/bootstrap.js" defer></script>
-    
+    <!-- <link rel="stylesheet" href="./assets/node_modules/bs4/bootstrap.css" />
+    <script src="./assets/node_modules/bs4/bootstrap.js" defer></script> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./main.css" />
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" defer></script>
     <script src="./main.js" defer></script>
 
   </head>
@@ -55,7 +57,7 @@
       <!-- jumbotron start -->
       <div class="showcase">
         <h2 class="text-white">Welcome To</h2>
-        <h1 class="text-white">CYF-Simbock-Mendong</h1>
+        <h1 class="text-white">CYF-Simbock</h1>
       </div>
       <!-- jumbotron end -->
     </header>
@@ -69,7 +71,7 @@
           movement were those who left CYF Nsimeyong(reason why CYF NSIMEYONG is known as the mother of CYF SIMBOCK MENDONG. 
           The pioneer executive of this group was headed by BROTHER ATANGA NDI LESLIE who piloted the activities of this group from  2007 to 2011.
           Brother Lesly and his theme took this group to her first ever rally( zonal) in 
-          2008 at PC Basto, where the group took part in all the activities and emerged 4th in the YAOUNDE Central Zone. 
+          2008 at PC Bastos, where the group took part in all the activities and emerged 4th in the YAOUNDE Central Zone. 
         </p>
         <p>
           Later on power changed hands and SISTER TABE SERA AGBOR became the second President of CYF SIMBOCK MENDONG.
@@ -90,7 +92,7 @@
       <section class="colors" id="colors">
         <h3 class="text-center heading mb-3">CYF Colors</h3>
        <div class="row">
-         <div class="col-sm-3">
+         <div class="col-lg-3">
            <div class="card">
              <div class="card-header text-center">White</div>
              <div class="card-body">
@@ -101,7 +103,7 @@
              </div>
            </div>
          </div>
-         <div class="col-sm-3">
+         <div class="col-lg-3">
            <div class="card">
              <div class="card-header text-center">Black</div>
              <div class="card-body">
@@ -112,7 +114,7 @@
              </div>
            </div>
          </div>
-         <div class="col-sm-3">
+         <div class="col-lg-3">
            <div class="card">
              <div class="card-header text-center">Blue</div>
              <div class="card-body">
@@ -123,7 +125,7 @@
              </div>
            </div>
          </div>
-         <div class="col-sm-3">
+         <div class="col-lg-3">
            <div class="card">
              <div class="card-header text-center">Red</div>
              <div class="card-body">
@@ -167,7 +169,7 @@
 
       <section class="footer bg-dark text-white p-5 mx-10 mb-0" id="footer">
         <div class="up" id="up">
-          <i class="fas fa-chevron-up"></i>
+         <i class="fas fa-chevron-up"></i>
         </div>
         
         <div class="details">
